--- a/test2/style.css
+++ b/test2/style.css
@@ -1,3 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap");
+
+html,
+body {
+  height: 100%;
+  overflow: hidden;
+}
+
 body {
   background-image: url(assets/cube-bg.jpg);
   background-size: cover;
@@ -10,14 +18,7 @@ body {
   font-family: sans-serif;
 }
 
-#resultDisplay {
-  text-align: center;
-  font-size: 3rem;
-  margin-top: 4rem;
-  height: 4rem;
-}
-
-.cubesContainer {
+.cubesCont {
   margin-bottom: 2rem;
   position: relative;
   width: 100%;
@@ -81,43 +82,149 @@ body {
   background-color: red;
 }
 
-#resultDisplay span {
+/* pop up tw epilepsy */
+dialog {
+  background: #ffddf2;
+  color: #000000;
+  border-radius: 25px;
+  border: 2px solid rgba(0, 0, 0, 0.3);
+  box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.4),
+    inset 0 0 5px rgba(255, 255, 255, 0.3);
+  padding: 0;
+  width: 320px;
+  font-family: "MS Sans Serif", Tahoma, sans-serif;
+}
+
+#dialogCloseButton {
+  margin-top: -10px;
+}
+
+.title-bar {
+  background: linear-gradient(to bottom, #ffffff 10%, #ff3fb5);
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 3px 6px;
+  font-size: 14px;
+  font-family: "MS Sans Serif", Tahoma, sans-serif;
+}
+
+.title-left {
+  display: flex;
+  align-items: center;
+  gap: 6px;
+}
+
+.title-left .icon {
+  width: 16px;
+  height: 16px;
+  font-size: 12px;
+  text-align: center;
+  line-height: 16px;
+  color: #ffffff;
+  margin-left: 10px;
+}
+
+.title-buttons {
+  display: flex;
+  gap: 2px;
+}
+
+.title-buttons button {
+  width: 20px;
+  height: 20px;
+  color: #ffffff;
   font-weight: bold;
-  font-size: 3rem;
-}
-
-.home-icon {
-  position: fixed;
-  top: 10px;
-  left: 10px;
-  z-index: 1000;
-}
-
-.home-icon img {
-  width: 70px;
-  height: 70px;
-  display: block;
+  padding: 0;
   cursor: pointer;
-}
-
-.reset-icon {
-  position: fixed;
-  top: 10px;
-  right: 10px;
-  z-index: 1000;
-}
-
-.reset-icon img {
-  width: 30px;
-  height: 30px;
-  display: block;
-  cursor: pointer;
-}
-
-#resetButton {
-  position: fixed;
-  top: 20px;
-  right: 20px;
+  background: transparent;
+  margin-left: -30px;
   border: none;
-  background: none;
+}
+
+.window-body {
+  padding: 20px;
+  text-align: center;
+  color: #000000;
+  font-size: 14px;
+  font-family: "MS Sans Serif", Tahoma, sans-serif;
+}
+
+.button-row {
+  display: flex;
+  justify-content: center;
+  padding: 10px;
+}
+
+.button-row button {
+  background: linear-gradient(to bottom, #ffffff, #ff3fb5);
+  color: #000000;
+  border-radius: 25px;
+  border: 1px solid #000000;
+  box-shadow: 4px 4px 30px rgba(0, 0, 0, 0.3);
+  padding: 4px 20px;
+  font-size: 13px;
+  cursor: pointer;
+  color: #000000;
+  font-family: "Orbitron", sans-serif;
+}
+
+.button-row button:hover {
+  box-shadow: 2px 2px #000;
+  border: 1px solid #000;
+  transform: translateY(-2px);
+  background: linear-gradient(to bottom, #ffffff, #ff66c8);
+}
+
+.button-row button:active {
+  transform: translateY(2px);
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+  background: linear-gradient(to bottom, #ffffff, #ff3fb5);
+  color: #000000;
+}
+
+.button-row button:focus {
+  outline: none;
+}
+
+.footer-buttons {
+  position: absolute;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+  gap: 20px;
+  justify-content: center;
+}
+
+.footer-buttons button {
+  padding: 4px 20px;
+  font-size: 14px;
+  cursor: pointer;
+  background: linear-gradient(to bottom, #ffffff, #ff3fb5);
+  color: #000000;
+  border-radius: 25px;
+  border: 1px solid #000000;
+  box-shadow: 4px 4px 30px rgba(0, 0, 0, 0.3);
+  text-decoration: none;
+  font-family: "Orbitron", sans-serif;
+}
+
+.footer-buttons button:hover {
+  box-shadow: 2px 2px #000;
+  border: 1px solid #000;
+  transform: translateY(-2px);
+  background: linear-gradient(to bottom, #ffffff, #ff66c8);
+}
+
+.footer-buttons button:active {
+  transform: translateY(2px);
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+  background: linear-gradient(to bottom, #ffffff, #ff3fb5);
+  color: #000000;
+}
+
+.footer-buttons button:focus {
+  outline: none;
 }
